--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Pasta Recipe</title>
 </head>
 <body>
     <h1>Pasta Recipe</h1>
     <img src="./pasta.jpeg" alt="pastapic">
-    <h2>Hot to make Pasta</h2>
+    <h2>How to make Pasta</h2>
     
     <p>So, you're standing in the grocery store looking at an endless display of pasta noodles and you ask yourself, "How do you cook pasta?" The good news is, it's not hard. In fact, it's one of the easiest bits of cooking you can do. Still, there are a few simple tricks to master so your pasta turns out just right. We'll show you how to cook pasta, including how long to cook pasta, and answer some frequently asked questions about how to cook pasta noodles.</p>
 
